--- a/Versão6 - Cópia/Projeto_Inter/nbproject/private/private.properties
+++ b/Versão6 - Cópia/Projeto_Inter/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\MAQLAB214\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Walyson\\AppData\\Roaming\\NetBeans\\22\\build.properties
